--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -24,7 +24,7 @@ const schemaOrg = {
 				addressLocality: 'Phoenix',
 				addressCountry: 'US',
 			},
-			sameAs: ['https://instagram.com/satofoto'],
+			sameAs: ['https://instagram.com/sato_foto'],
 		},
 		{
 			'@type': 'Product',
