--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Offer from '../components/Offer.astro';
 import Transformation from '../components/Transformation.astro';
 import ReserveEmail from '../components/ReserveEmail.astro';
 import BookingBox from '../components/BookingBox.astro';
+import PrivateSessions from '../components/PrivateSessions.astro';
 import FAQ from '../components/FAQ.astro';
 import FinalCTA from '../components/FinalCTA.astro';
 ---
@@ -23,6 +24,7 @@ import FinalCTA from '../components/FinalCTA.astro';
 	<Transformation />
 	<ReserveEmail />
 	<BookingBox />
+	<PrivateSessions />
 	<FAQ />
 	<FinalCTA />
 </DefaultLayout>
